--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "serve:ssr:intro-to-angular": "node dist/intro-to-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -15,7 +16,10 @@
     "@angular/forms": "19.2.4",
     "@angular/platform-browser": "19.2.4",
     "@angular/platform-browser-dynamic": "19.2.4",
+    "@angular/platform-server": "^19.2.4",
     "@angular/router": "19.2.4",
+    "@angular/ssr": "^19.2.4",
+    "express": "^4.18.2",
     "rxjs": "7.8.1",
     "tslib": "2.8.1",
     "zone.js": "0.15.0"
@@ -24,6 +28,8 @@
     "@angular-devkit/build-angular": "19.2.4",
     "@angular/cli": "19.2.4",
     "@angular/compiler-cli": "19.2.4",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.18.0",
     "prettier": "3.4.2",
     "typescript": "5.6.3"
   }
